Upgraded to work with Pypi

--- a/custom_components/hd_powerview/manifest.json
+++ b/custom_components/hd_powerview/manifest.json
@@ -1,8 +1,8 @@
 {
   "domain": "hd_powerview",
   "name": "PowerView",
-  "documentation": "https://",
-  "requirements": [],
+  "documentation": "https://github.com/safepay/sensor.hd_powerview/blob/master/README.md",
+  "requirements": ["pyhdpowerview==0.0.8"],
   "dependencies": [],
-  "codeowners": []
+  "codeowners": ["@safepay"]
 }
