--- a/custom_components/hd_powerview/manifest.json
+++ b/custom_components/hd_powerview/manifest.json
@@ -2,7 +2,7 @@
   "domain": "hd_powerview",
   "name": "PowerView",
   "documentation": "https://github.com/safepay/sensor.hd_powerview/blob/master/README.md",
-  "requirements": [""],
+  "requirements": [],
   "dependencies": [],
   "codeowners": ["@safepay"]
 }
